edit img logo di header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</nav>
 		<header class="header" id="header">
 			<div class="hero">
-				<img src="img/logoimgfull.png" alt="header-img" id="header-img">
+				<img src="img/logoimgfull.png" alt="header-img" id="header-img" />
 				<h2 class="heading">Toko Online Aku</h2>
 				<p class="sub-heading">Aplikasiku</p>
 			</div>
