edit icon services dan ubah tagheader jd div

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li><a href="#contact" class="nav-link">Contact Us</a></li>
 			</ul>
 		</nav>
-		<header class="header" id="header">
+		<div class="header">
 			<div class="hero">
 				<img src="img/logoimgfull.png" alt="header-img" id="header-img" />
 				<h2 class="heading">Toko Online Aku</h2>
@@ -50,7 +50,7 @@
 				<h4 class="price">IDR 500k</h4>
 				<p class="item">LOVING CIKI</p>
 			</div>
-		</header>
+		</div>
 
 		<nav class="menu" id="nav-bar">
 			<div class="menu-toggle">
@@ -74,28 +74,28 @@
 
 		<section class="services" id="services">
 			<div class="service">
-				<div class="icon"><i class="fas fa-camera"></i></div>
+				<div class="icon">💻</div>
 				<h3>Tutorial</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et</p>
 			</div>
 
 			<div class="service">
-				<div class="icon"><i class="fas fa-camera"></i></div>
+				<div class="icon">🎓</div>
 				<h3>Online Course</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et</p>
 			</div>
 
 			<div class="service">
-				<div class="icon"><i class="fas fa-camera"></i></div>
+				<div class="icon">🎙</div>
 				<h3>Podcast</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et</p>
 			</div>
 
 			<div class="service">
-				<div class="icon"><i class="fas fa-camera"></i></div>
+				<div class="icon">👕</div>
 				<h3>Merchandise</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et</p>
