tambah logo dari fcc

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container" id="header">
 		<nav class="menu-atas">
 			<div class="logo">
-				<h4>Toko Online</h4>
+				<img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo">
 			</div>
 			<div class="menu-toggle-atas">
 				<input type="checkbox">
@@ -36,6 +36,7 @@
 				<li><a href="#contact" class="nav-link">Contact Us</a></li>
 			</ul>
 		</nav>
+
 		<div class="header">
 			<div class="hero">
 				<img src="img/logoimgfull.png" alt="header-img" id="header-img" />
